# cloud-storage

./: .dockerignore  .gitignore  CMakeLists.txt  CloudStorage.sln  Dockerfile  Dockerfile.sharp  conanfile.txt  main.cc
.github/workflows/: docker-image.yml
WorkWithDockerCompose/: docker-compose.yaml
WorkWithDockerCompose/db-create/: file.db  initialize-file-bd.sql  initialize-file-db.sql  initialize-user-bd.sql  make-db  user.db
WorkWithDockerCompose/dump/: dump.sql
authentication_service/: authentication_service.csproj  authentication_service.sln
authentication_service/Api/: IUserHandler.cs  User.cs
authentication_service/Controllers/: AuthController.cs
authentication_service/Properties/: launchSettings.json
authentication_service/TokenService/: TokenService.cs
authentication_service/test-key/: private_key.pem  public_key.pem
caching/: CMakeLists.txt  cache_CacheChecker.h
caching_service/: CMakeLists.txt  cache_CacheChecker.cc  cache_CacheChecker.h
configs/: config.docker.json  config.json
controllers/: CategoryController.cc  CategoryController.h  CategoryControllerBase.cc  CategoryControllerBase.h  FileController.h  FileControllerBase.cc  FileControllerBase.h  UserController.h  UserControllerBase.cc  UserControllerBase.h
file_service/: CMakeLists.txt  main.cc
file_service/configs/: config.docker.json  config.json
file_service/controllers/: FileController.cc  FileController.h  FileControllerBase.cc  FileControllerBase.h
file_service/models/: File.cc  File.h  model.json
file_service/test/: CMakeLists.txt
file_service/update_file/: update_file.hpp
gateway/: Program.cs  gateway.csproj
gateway/Properties/: routing.docker.json
int_test/: AuthentificationTest.cs  FileServiceTest.cs  UserServiceTest.cs  VerifyFilesTest.cs  appsettings.docker.json  appsettings.json  int_test.csproj  int_test.sln
kafka/: kafka-exception.hpp
kafka_client/: CMakeLists.txt  api_Kafka.cc  api_Kafka.h
kafka_service/: CMakeLists.txt
models/: Category.cc  Category.h  File.cc  File.h  User.cc  User.h  model.json
plugins/: cache_CacheChecker.cc  cache_CacheChecker.h
test/: CMakeLists.txt  test_main.cc
user_service/: CMakeLists.txt  main.cc
user_service/test/: CMakeLists.txt  test_main.cc
(+22 files in other folders)
